commit 8: modified articles.html

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -82,24 +82,24 @@
     </div>
   </div>
   <div class="min-h-screen grid grid-rows-4 grid-cols-4 p-10 gap-10">
-    <div class="rounded-3xl bg-gradient-to-br from-green-200 to-green-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-cyan-300 to-cyan-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-purple-300 to-purple-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-orange-200 to-orange-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-indigo-300 to-indigo-600"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-green-200 to-green-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-cyan-300 to-cyan-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-purple-300 to-purple-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-orange-200 to-orange-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-indigo-300 to-indigo-600 w-full h-full"></div>
     <div
-      class="col-span-2 row-span-2 rounded-3xl bg-gradient-to-br from-fuchsia-300 to-fuchsia-800 flex items-center justify-center animate-pulse relative"
+      class="col-span-2 row-span-2 rounded-3xl bg-gradient-to-br from-fuchsia-300 to-fuchsia-800 flex items-center justify-center animate-pulse relative w-full h-fule"
     >
       <h1 class="font-GilroySemiBold text-8xl text-center w-full">Coming Soon...</h1>
       <p class="absolute -bottom-[25px] bg-white text-stone-700 py-3 px-5 rounded-full">Read More...</p>
     </div>
-    <div class="rounded-3xl bg-gradient-to-br from-lime-200 to-lime-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-teal-300 to-teal-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-yellow-300 to-yellow-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-sky-300 to-sky-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-red-300 to-red-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-blue-300 to-blue-600"></div>
-    <div class="rounded-3xl bg-gradient-to-br from-rose-300 to-rose-600"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-lime-200 to-lime-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-teal-300 to-teal-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-yellow-300 to-yellow-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-sky-300 to-sky-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-red-300 to-red-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-blue-300 to-blue-600 w-full h-full"></div>
+    <div class="rounded-3xl bg-gradient-to-br from-rose-300 to-rose-600 w-full h-full"></div>
   </div>
 </body>
 <script>
